--- a/restaurant.html
+++ b/restaurant.html
@@ -34,8 +34,8 @@
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
-    <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
+    <section id="restaurant-container" tabindex="0" aria-label="Information about Restaurant">
+      <h1 id="restaurant-name" tabindex="0"></h1>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
