--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <main id="maincontent">
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" aria-label="location" role="application"></div>
     </section>
     <section>
       <div class="filter-options" tabindex="0" aria-label="Filter results">
