--- a/restaurant.html
+++ b/restaurant.html
@@ -18,7 +18,7 @@
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
+    <ul id="breadcrumb" role="navigation">
       <li><a href="/">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
@@ -30,13 +30,13 @@
   <main id="maincontent">
     <!-- Beginning map -->
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" aria-label="location" role="application"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
-    <section id="restaurant-container" tabindex="0" aria-label="Information about Restaurant">
-      <h1 id="restaurant-name" tabindex="0"></h1>
-      <img id="restaurant-img">
+    <section id="restaurant-container" tabindex="0" aria-label="Information about Restaurant" role="application">
+      <h2 id="restaurant-name" tabindex="0"></h2>
+      <img id="restaurant-img" alt="restaurant">
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
       <table id="restaurant-hours"></table>
